# srm

./: .gitignore  CMakeLists.txt  readme.md  srm.cmake
docs/: 02_dsl.md  (+4 more)
test/: CMakeLists.txt  README.md  srm_c_test.md  srm_python_test.md
test/testcase_projects/C-TC-F1-01/module/: srm_module.json
test/testcase_projects/C-TC-F1-02/module/: srm_module.json
test/testcase_projects/C-TC-F1-03/: srm_types.json
test/testcase_projects/C-TC-F1-03/module/: srm_module.json
test/testcase_projects/C-TC-F2-01/module/: srm_module.json
test/testcase_projects/C-TC-F2-02/module/: srm_module.json
test/testcase_projects/C-TC-F2-04/module/: srm_module.json
test/testcase_projects/C-TC-F3-01/module/: srm_module.json
test/testcase_projects/C-TC-F3-02/module/: srm_module.json
test/testcase_projects/C-TC-F3-03/module/: srm_module.json
test/testcase_projects/C-TC-F3-04/module/: srm_module.json
test/testcase_projects/C-TC-F4-01/module/: srm_module.json
test/testcase_projects/C-TC-F4-03/module/: srm_module.json
test/testcase_projects/C-TC-F5-01/module/: srm_module.json
test/testcase_projects/C-TC-F5-02/: srm_types.json
test/testcase_projects/C-TC-F6-01/module/: srm_module.json
test/testcase_projects/C-TC-F6-02/module/: srm_module.json
test/testcase_projects/C-TC-F6-03/module/: srm_module.json
test/testcase_projects/C-TC-F7-01/: srm_types.json
test/testcase_projects/C-TC-F7-01/module/: srm_module.json
test/testcase_projects/C-TC-F7-02/: srm_types.json
test/testcase_projects/C-TC-F7-02/module/: srm_module.json
test/testcase_projects/C-TC-F7-03/: srm_types.json
test/testcase_projects/C-TC-F8-01/module/: srm_module.json
test/testcase_projects/C-TC-F8-02/module/: srm_module.json
test/testcase_projects/C-TC-F8-03/module/: srm_module.json
test/testcase_projects/C-TC-F8-04/module/: srm_module.json
test/testcase_projects/C-TC-F8-05/module/: srm_module.json
test/testcase_projects/C-TC-F9-01/: srm_types.json
test/testcase_projects/C-TC-F9-02/: srm_types.json
test/testcase_projects/C-TC-F9-03/: srm_types.json
test/testcase_projects/C-TC-F9-03/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F1-01/: srm_module.json
test/testcase_projects/PYTHON-TC-F1-02/: srm_module.json
test/testcase_projects/PYTHON-TC-F1-08/: srm_module.json
test/testcase_projects/PYTHON-TC-F1-09/: srm_module.json
test/testcase_projects/PYTHON-TC-F2-06/module_a/: srm_module.json
test/testcase_projects/PYTHON-TC-F3-03/module_b/: srm_module.json
test/testcase_projects/PYTHON-TC-F4-01/module_b/: srm_module.json
test/testcase_projects/PYTHON-TC-F4-03/module_b/: srm_module.json
test/testcase_projects/PYTHON-TC-F4-04/module_b/: srm_module.json
test/testcase_projects/PYTHON-TC-F4-07/module_a/: srm_module.json
test/testcase_projects/PYTHON-TC-F4-07/module_b/: srm_module.json
test/testcase_projects/PYTHON-TC-F5-02/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F6-01/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F6-02/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F6-03/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F6-04/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F6-06/module/: srm_module.json
test/testcase_projects/PYTHON-TC-F6-08/module/: srm_module.json
test/testcase_projects/RQ0_C_F10_04/module/: srm_module.json
test/testcase_projects/RQ0_C_F13_02/: srm_types.json
test/testcase_projects/RQ0_C_F13_02/module/: srm_module.json
test/testcase_projects/RQ0_C_F13_03/module/: srm_module.json
test/testcase_projects/RQ0_C_F14_03/: srm_types.json
test/testcase_projects/RQ0_C_F14_05/: srm_types.json
test/testcase_projects/RQ0_C_F15_04/: srm_types.json
test/testcase_projects/RQ0_C_F7_02/: srm_types.json
test/testcase_projects/RQ0_C_F8_03/module/: srm_module.json
test/testcase_projects/RQ0_C_F8_05/: srm_types.json
test/testcase_projects/RQ0_C_F8_05/module/: srm_module.json
test/testcase_projects/RQ0_C_F9_03/module/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_01/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_04/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_05/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_06/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_07/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_10/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F1_11/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F2_05/module_b/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F2_06/module_b/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F3_01/module_b/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F3_02/module_b/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F3_03/module_a/: srm_module.json
test/testcase_projects/RQ0_PYTHON_F5_04/: srm_types.json
test/testcase_projects/RQ0_PYTHON_F6_06/: srm_types.json
test/testcase_projects/RQ1_PYTHON_F2_03/: srm_types.json
test/testcase_projects/RQ1_PYTHON_F2_04/: srm_types.json
test/testcase_projects/RQ1_PYTHON_F2_05/: srm_types.json
test/testcase_projects/RQ1_PYTHON_F2_06/: srm_types.json
test/testcase_projects/RQ1_PYTHON_F3_01/: srm_types.json
test/testcase_tests/c_tests/: CMakeLists.txt  README.md  test_f10_srm_interface.c  test_f11_readonly_item.c  test_f12_readonly_storage.c  test_f13_offset_readonly.c  test_f1_type_enum.c  test_f2_storage_macros.c  test_f3_item_macros.c  test_f4_offset_valid.c  test_f5_offset_invalid.c  test_f6_storage_size.c  test_f7_item_size.c  test_f8_name_conversion.c  test_f9_alignment.c  test_srm_common.h
test/testcase_tests/python_tests/: CMakeLists.txt  srm_test_common.py  test_f1_schema.py  test_f2_collect.py  test_f3_uniqueness.py  test_f4_reference.py  test_f5_merge.py  test_f6_layout.py  test_rq0_f1_schema.py  test_rq0_f2_collect.py  test_rq0_f3_uniqueness.py  test_rq0_f4_reference.py  test_rq0_f5_merge.py  test_rq0_f6_layout.py  test_rq1_f1_item_value.py  test_rq1_f2_type_validate.py  test_rq1_f3_readwrite_item.py  test_rq1_f3_storage_item.py  test_rq1_f4_readonly_array.py  test_rq1_f5_file_value.py
(+47 files in other folders)
